# AA-SIPP-m

./: AA-SIPP-m.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  map.xml
include/: aa_sipp.h  config.h  constraints.h  dynamicobstacles.h  gl_const.h  lineofsight.h  map.h  mission.h  searchresult.h  structs.h  task.h  xmlLogger.h
src/: aa_sipp.cpp  config.cpp  constraints.cpp  dynamicobstacles.cpp  main.cpp  map.cpp  mission.cpp  task.cpp  xmlLogger.cpp
